--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Hello, It's Me</h3>
             <h1>Ahmed Abdelhay Elsay</h1>
             <h3>And I'm <span class="multiple-text"></span></h3>
-            <p> Hey there, I'm Joe , With over 3 years of experience</p>
+            <p> Hey there, I'm Ahmed , With over 3 years of experience</p>
 
             <div class="social-media">
                 <a href=""><i class='bx bxl-facebook'></i></a>
