--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             <p> Hey there, I'm Ahmed , With over 3 years of experience</p>
 
             <div class="social-media">
-                <a href=""><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://www.facebook.com/alsay.ahmad"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.linkedin.com/in/ahmed-elsay-799951287/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/ahmed_abdelhady_elssay/"><i class='bx bxl-instagram-alt'></i></a>
 
             </div>
 
